fixed New to blog, and titles have corrected spacinggggg

--- a/themes/exchanges-redesign/css/style.css
+++ b/themes/exchanges-redesign/css/style.css
@@ -302,9 +302,14 @@
 	      padding-bottom: .7em;
 	      margin-bottom: 1em;
       }
+      
+      .postheader h1{
+	      float: left; 
+      }
+      
       span.postdate{
 	      font-size: .9em;
-	      float: right;
+	      /*float: right;*/
 	      margin-top: 30px;
 	      color: #735a3a;
       }
